@@ -3,6 +3,8 @@ News (mainly features/major bug fixes)
 portage-2.2
 -------------
 
+* Add link level dependency awareness to emerge --depclean and --prune actions
+  in order to protect against uninstallation of required libraries.
 * Add emerge --jobs and --load-average options which specify behavior
   for building packages in parallel or for generating metadata in parallel
   with emerge --regen.
